patched settings page and started to patch sql injectio vulnerabilities

--- a/web-server/register.html
+++ b/web-server/register.html
@@ -4,7 +4,7 @@
 	</head>
     <body>
         <link rel='stylesheet' href='CSS/auth.css'>
-	    <form id='register' action='/php/register.php' method='post'>
+	    <form id='register'>
             <div class='logo'><img src="img/Skitter.png"></img></div>
             <div><input class='textField' id='eml' type='text' placeholder='Email' required></div>
             <div><input class='textField' id='display' type='text' placeholder='Display Name' required></div>
