--- a/web-server/settings.html
+++ b/web-server/settings.html
@@ -71,8 +71,9 @@ function picChange(img){
             document.getElementById("picChangeResponse").innerHTML = this.responseText;
         }
     };
-    xhttp.open("POST", "php/changeProfileImage.php?myimage="+img, true);
-    xhttp.send();
+    xhttp.open("POST", "php/changeProfileImage.php", true);
+    xhttp.setRequestHeader("Content-Type", "application/x-www-form-urlencoded; charset=UTF-8");
+    xhttp.send("myimage="+img);
 }
 
         </script>
